tests/sources/invalid/enums/enum_generic_unsupported.fire
// Invalid: generic enums are not yet supported.
// EXPECT: parser error

enum Option<T> {  //~ ERROR FS-PARSE-0012 @12
    Some,
    None
}
